# jdkPulse

./: .gitignore  PHASE2_SETUP.md  README.md  package-lock.json  package.json  vite.config.js
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  INJECTION_STRATEGY.md  SPECIFICATION.md
src/: index.html  main.jsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: app.icns
src-tauri/src/: lib.rs  main.rs  tauri_main.rs
